update libraries (angular 9, clarity 3...)

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -61,7 +61,7 @@
 </div>
 
 <div class="progress-bar-container">
-    <div class="progress loop" *ngIf="searchInProgress"><progress></progress></div>
+    <clr-progress-bar clrLoop *ngIf="searchInProgress"></clr-progress-bar>
 </div>
 
 <app-search-results-list [searchResults]="searchResultsTree" (fileSelected)="openFile($event)"></app-search-results-list>
