--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,7 +63,7 @@ $ng-select-disabled-text: rgba(black, 0.38) !default;
 $ng-select-divider: rgba(black, 0.12) !default;
 $ng-select-bg: #ffffff !default;
 
-.ng-select {
+.projects-select {
     ng-select {
         padding: 0;
         height: auto;
