--- a/src/app/shared/components/file-viewer/file-viewer.component.html
+++ b/src/app/shared/components/file-viewer/file-viewer.component.html
@@ -17,7 +17,7 @@
     </h3>
     <div class="modal-body">
 
-        <div class="progress loop" *ngIf="!fileLoaded"><progress></progress></div>
+        <clr-progress-bar clrLoop *ngIf="!fileLoaded"></clr-progress-bar>
 
         <div class="alert alert-danger" role="alert" *ngIf="error">
             <div class="alert-items">
