--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -29,6 +29,10 @@
                         <input type="radio" clrRadio value="TREE" formControlName="searchResultsView" />
                         <label>Tree</label>
                     </clr-radio-wrapper>
+                    <clr-radio-wrapper>
+                        <input type="radio" clrRadio value="COMPACT_TREE" formControlName="searchResultsView" />
+                        <label>Compact tree</label>
+                    </clr-radio-wrapper>
                 </clr-radio-container>
             </div>
         </div>
