--- a/src/app/search/search-results-list/search-results-list.component.html
+++ b/src/app/search/search-results-list/search-results-list.component.html
@@ -9,7 +9,8 @@
     </button>
     <clr-tree [clrLazy]="true">
         <clr-tree-node *clrRecursiveFor="let searchResult of searchResults; getChildren: getChildren"
-                    [clrExpandable]="searchResult.leafs && searchResult.leafs.length > 0" [(clrExpanded)]="searchResult.expanded">
+                    [clrExpandable]="searchResult.leafs && searchResult.leafs.length > 0" [(clrExpanded)]="searchResult.expanded"
+                    (clrExpandedChange)="onExpandChange(searchResult)">
             <ng-container *ngIf="searchResult.type === 'PROJECT'">
                 <clr-icon shape="organization"></clr-icon>
                 <span class="expandable-name" (click)="toggleExpandLeaf(searchResult)" (dblclick)="expandTree(searchResult)">
