--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -23,6 +23,14 @@
                     <input clrCheckbox type="checkbox" formControlName="enableResultHiding" />
                     <label>Enable result entries hiding</label>
                 </clr-checkbox-wrapper>
+                <clr-checkbox-wrapper>
+                    <input clrCheckbox type="checkbox" formControlName="showFileHitsCount" />
+                    <label>Show file hits count</label>
+                </clr-checkbox-wrapper>
+                <clr-checkbox-wrapper>
+                    <input clrCheckbox type="checkbox" formControlName="showTotalHitsCount" />
+                    <label>Show total hits count</label>
+                </clr-checkbox-wrapper>
                 <clr-radio-container clrInline class="setting-row">
                     <label>Results view</label>
                     <clr-radio-wrapper>
