add search history (closes #17)

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -47,10 +47,13 @@
                     <input clrInput type="text" id="filename" formControlName="searchFilename" size="25">
                     <clr-control-helper>Use * as a wildcard, e.g. *.java, MyFile.*</clr-control-helper>
                 </clr-input-container>
-                <clr-input-container>
+                <clr-datalist-container>
                     <label for="searchText">Search text</label>
-                    <input clrInput type="text" id="searchText" formControlName="searchText" size="35">
-                </clr-input-container>
+                    <input clrDatalistInput type="text" id="searchText" formControlName="searchText" #searchTextInput size="35" autocomplete="off">
+                    <datalist>
+                        <option *ngFor="let item of historyStoreService.history$ | async" [value]="item"></option>
+                    </datalist>
+                </clr-datalist-container>
                 <button type="submit" class="btn btn-icon btn-success">
                     <clr-icon shape="search"></clr-icon>
                     Search
