--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -20,6 +20,26 @@
                     <label>Remember last search</label>
                 </clr-checkbox-wrapper>
                 <clr-checkbox-wrapper>
+                    <input clrCheckbox type="checkbox" formControlName="enableSearchHistory" />
+                    <label>Enable search history</label>
+                </clr-checkbox-wrapper>
+                <div class="clr-row clr-align-items-end settings-row" *ngIf="settingsForm.get('search.enableSearchHistory').value">
+                    <div class="clr-col-8">
+                        <clr-input-container class="history-limit-input">
+                            <label>Max history elements</label>
+                            <input id="historyElementCount" clrInput type="number" formControlName="historyElementCount" />
+                            <clr-control-error *ngIf="settingsForm.get('search.historyElementCount').invalid">
+                                Invalid value!
+                            </clr-control-error>
+                        </clr-input-container>
+                    </div>
+                    <div class="clr-col-4">
+                        <button class="btn btn-sm btn-outline btn-clear-history" type="button" (click)="historyStoreService.clear()">
+                            Clear history
+                        </button>
+                    </div>
+                </div>
+                <clr-checkbox-wrapper>
                     <input clrCheckbox type="checkbox" formControlName="enableResultHiding" />
                     <label>Enable result entries hiding</label>
                 </clr-checkbox-wrapper>
@@ -57,7 +77,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-outline" (click)="close()">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary" [disabled]="settingsForm.invalid">Save</button>
         </div>
     </clr-modal>
 </form>
