add hits sum for the entire results tree (closes #20)

--- a/src/app/search/search-results-list/search-results-list.component.scss
+++ b/src/app/search/search-results-list/search-results-list.component.scss
@@ -31,33 +31,13 @@ clr-icon {
     flex-shrink: 0;
 }
 
-.label-info, .badge {
+.label-info {
     margin-right: 0;
 }
 
 .hide-icon {
     margin: 0 5px;
     display: none;
-}
-
-.icon-badge {
-    margin-left: 2px;
-
-    clr-icon {
-        width: 18px;
-        height: 18px;
-        margin-top: -6px;
-        margin-right: 0;
-        opacity: 0.6;
-    }
-
-    .badge {
-        position: relative;
-        margin-left: -12px;
-        margin-bottom: -4px;
-        height: 0.6rem;
-        min-width: 0.6rem;
-    }
 }
 
 clr-tree-node {
