--- a/src/app/search/search-results-list/search-results-list.component.html
+++ b/src/app/search/search-results-list/search-results-list.component.html
@@ -11,6 +11,10 @@
         <clr-icon shape="eye-hide"></clr-icon>
         Reset hidden results
     </button>
+    <app-hits-count
+        [fileHitsCount]="showFileHitsCount ? treeFileHitsCount : 0"
+        [totalHitsCount]="showTotalHitsCount ? treeTotalHitsCount : 0">
+    </app-hits-count>
     <clr-tree [clrLazy]="true">
         <clr-tree-node *clrRecursiveFor="let searchResult of searchResults; getChildren: getChildren"
                     [clrExpandable]="searchResult.leafs && searchResult.leafs.length > 0" [(clrExpanded)]="searchResult.expanded"
@@ -21,38 +25,29 @@
                     {{searchResult.name}}
                 </span>
                 <span class="label label-info">{{searchResult.project.default_branch}}</span>
-                <span class="icon-badge" *ngIf="showFileHitsCount && searchResult.fileHitsCount">
-                    <clr-icon shape="file"></clr-icon>
-                    <span class="badge badge-info results-count">{{searchResult.fileHitsCount}}</span>
-                </span>
-                <span class="icon-badge" *ngIf="showTotalHitsCount && searchResult.totalHitsCount">
-                    <clr-icon shape="crosshairs"></clr-icon>
-                    <span class="badge badge-success results-count">{{searchResult.totalHitsCount}}</span>
-                </span>
+                <app-hits-count
+                    [fileHitsCount]="showFileHitsCount ? searchResult.fileHitsCount : 0"
+                    [totalHitsCount]="showTotalHitsCount ? searchResult.totalHitsCount : 0">
+                </app-hits-count>
             </ng-container>
             <ng-container *ngIf="searchResult.type === 'DIRECTORY'">
                 <clr-icon shape="folder"></clr-icon>
                 <span class="expandable-name" (click)="toggleExpandLeaf(searchResult)" (dblclick)="expandTree(searchResult)">
                     <app-path-text class="directory-path" [path]="searchResult.name"></app-path-text>
                 </span>
-                <span class="icon-badge" *ngIf="showFileHitsCount && searchResult.fileHitsCount">
-                    <clr-icon shape="file"></clr-icon>
-                    <span class="badge badge-info results-count">{{searchResult.fileHitsCount}}</span>
-                </span>
-                <span class="icon-badge" *ngIf="showTotalHitsCount && searchResult.totalHitsCount">
-                    <clr-icon shape="crosshairs"></clr-icon>
-                    <span class="badge badge-success results-count">{{searchResult.totalHitsCount}}</span>
-                </span>
+                <app-hits-count
+                    [fileHitsCount]="showFileHitsCount ? searchResult.fileHitsCount : 0"
+                    [totalHitsCount]="showTotalHitsCount ? searchResult.totalHitsCount : 0">
+                </app-hits-count>
             </ng-container>
             <ng-container *ngIf="searchResult.type === 'FILE'">
                 <clr-icon shape="file"></clr-icon>
                 <a class="file-link" (click)="onFileSelected(searchResult.filePath, searchResult.project)">
                     <app-path-text class="file-path" [path]="searchResult.name"></app-path-text>
                 </a>
-                <span class="icon-badge" *ngIf="showTotalHitsCount && searchResult.totalHitsCount > 1">
-                    <clr-icon shape="crosshairs"></clr-icon>
-                    <span class="badge badge-success results-count">{{searchResult.totalHitsCount}}</span>
-                </span>
+                <app-hits-count
+                    [totalHitsCount]="showTotalHitsCount && searchResult.totalHitsCount > 1 ? searchResult.totalHitsCount : 0">
+                </app-hits-count>
             </ng-container>
             <clr-icon *ngIf="enableResultHiding" class="hide-icon" shape="eye-hide" (click)="hideResult(searchResult)">
             </clr-icon>
