- fix servers dropdown styles - exclude hidden results from hits calculation (closes #35)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             <clr-dropdown>
                 <button class="nav-icon" clrDropdownTrigger>
                     <clr-icon shape="hard-disk"></clr-icon>
-                    <clr-icon shape="caret down"></clr-icon>
+                    <clr-icon class="caret-icon" shape="caret down"></clr-icon>
                 </button>
                 <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
                     <h4 class="dropdown-header">Active server</h4>
