- add archived project badge - add include archived projects options (disabled by default)

--- a/src/app/search/search-results-list/search-results-list.component.html
+++ b/src/app/search/search-results-list/search-results-list.component.html
@@ -25,6 +25,7 @@
                     {{searchResult.name}}
                 </span>
                 <span class="label label-info">{{searchResult.project.default_branch}}</span>
+                <span class="label label-danger" *ngIf="searchResult.project.archived">Archived</span>
                 <app-hits-count
                     [fileHitsCount]="showFileHitsCount ? searchResult.getFileHitsCount() : null"
                     [totalHitsCount]="showTotalHitsCount ? searchResult.getTotalHitsCount() : null">
