--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -51,6 +51,10 @@
                     <input clrCheckbox type="checkbox" formControlName="showTotalHitsCount" />
                     <label>Show total hits count</label>
                 </clr-checkbox-wrapper>
+                <clr-checkbox-wrapper>
+                    <input clrCheckbox type="checkbox" formControlName="includeArchived" />
+                    <label>Include archived projects</label>
+                </clr-checkbox-wrapper>
                 <clr-radio-container clrInline class="setting-row">
                     <label>Results view</label>
                     <clr-radio-wrapper>
